// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validations component matches the snapshot when the HOC is passed an anonymous component with no name or display name 1`] = `
<Component
  error={Array []}
  info={Array []}
  name="foo"
  onBlur={[Function]}
  onChange={[Function]}
  warning={Array []}
/>
`;

exports[`Validations component matches the snapshot with the input component wrapped in the HOC with default props 1`] = `
<MockComponent
  error={Array []}
  info={Array []}
  name="foo "
  onBlur={[Function]}
  onChange={[Function]}
  warning={Array []}
/>
`;

exports[`Validations component when renderValidationMarkup is called returns the Icon when the component has an array of children 1`] = `
<MockComponent
  error={Array []}
  info={Array []}
  name="foo"
  onBlur={[Function]}
  onChange={[Function]}
  warning={Array []}
>
  <div />
  foo
  <div />
  <Icon
    bgSize="small"
    key="error-icon"
    type="error"
  />
</MockComponent>
`;

exports[`Validations component when renderValidationMarkup is called returns the children if no type has been set 1`] = `
<MockComponent
  error={Array []}
  info={Array []}
  name="foo"
  onBlur={[Function]}
  onChange={[Function]}
  warning={Array []}
>
  <div />
</MockComponent>
`;
